Bug 120397 - FILESAVE doesn't save all the text in text box control
Summary: FILESAVE doesn't save all the text in text box control
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha1+
Hardware: All All
: high major
Assignee: Balázs Varga
URL:
Whiteboard: target:25.8.0 target:24.8.6 target:24...
Keywords: bibisected, bisected, dataLoss, regression
Depends on:
Blocks: Form-Controls
  Show dependency treegraph
 
Reported: 2018-10-08 01:21 UTC by conman53095
Modified: 2025-02-19 05:08 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
complex ODG file that exhibits symptom (311.72 KB, application/vnd.oasis.opendocument.graphics)
2018-10-08 01:22 UTC, conman53095
Details
minimized document (12.92 KB, application/vnd.oasis.opendocument.graphics)
2018-11-09 16:33 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description conman53095 2018-10-08 01:21:36 UTC
Description:
I added text to a text box control.  I save the file.  I later open the file and add text to the text box.  I save the file.  I later open the file and the added text is not displayed.

I renamed the ODG file to a ZIP file. Opened it and looked at the "content.xml" file. After Draw saves it, there are two places where the field content is stored. One is the full text. The other is how it's displayed.

Under this tag: <form:textarea form:name="Features &amp; Traits Textbox"

You'll find this current-value setting:

form:current-value="Halfling  Lucky: Reroll attack, ability check, or saving throw when a 1 is rolled (must use new roll). Nimbleness: Can move through the space of any creature that is larger than me (small). Brave: Advantage on saving throws against being frightened. Stout: Advantage on saving throws against poison damage and have resistance against poison damage.  Monk Unarmed Defense: if no armor or shield AC=10 + Dex mod + Wis mod  Ki = 2 Flurry of Blows: 1 ki for 2 unarmed bonus attacks Patient Defense: 1 ki for bonus dodge Step of the Wind: 1 ki to disengage or dash as a bonus action, jump distance is doubled for the turn    test"

Then a few lines later, there's text tags that are missing that last bit of text "test" I added above while in Draw, so it's not displayed:

<text:p text:style-name="P1">Lucky: 
              <text:s />Reroll attack, ability check, or saving
              throw when a 1 is rolled (must use new
              roll).</text:p>
              <text:p text:style-name="P1">Nimbleness: Can move
              through the space of any creature that is larger than
              me (small).</text:p>
              <text:p text:style-name="P1">
              <text:span text:style-name="T1">Brave</text:span>:
              Advantage on saving throws against being
              frightened.</text:p>
              <text:p text:style-name="P1">Stout: Advantage on
              saving throws against poison damage and have
              resistance against poison damage.</text:p>
              <text:p text:style-name="P1" />
              <text:p text:style-name="P1">Monk</text:p>
              <text:p text:style-name="P1">Unarmed Defense: if no
              armor or shield</text:p>
              <text:p text:style-name="P1">AC=10 + Dex mod + Wis
              mod</text:p>
              <text:p text:style-name="P1" />
              <text:p text:style-name="P1">Ki = 2</text:p>
              <text:p text:style-name="P1">Flurry of Blows: 1 ki
              for 2 unarmed bonus attacks</text:p>
              <text:p text:style-name="P1">Patient Defense: 1 ki
              for bonus dodge</text:p>
              <text:p text:style-name="P1">Step of the Wind: 1 ki
              to disengage or dash as a bonus action, jump distance
              is doubled for the turn</text:p>
              <text:p text:style-name="P1" />

So the problem is that Draw doesn't save _all_ the text in the <text> tags...at least not consistently. It's probably easier to see in the attachment.

Steps to Reproduce:
1. Open attached ODG file.
2. Click on 2nd page, then on the first page so you can add content in textbox control.
3. Add text to the "Features & Traits" textbox.
4. Save file.
5. Exit Draw application.
6. Open file using Draw.
7. See that added text is not being displayed.


Actual Results:
Added text is not displayed, despite being stored in ODG's content.xml file.

Expected Results:
Display all the added text in textbox control when ODG file subsequently opened.


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Version: 6.0.6.2
Build ID: 1:6.0.6-0ubuntu0.18.04.1
CPU threads: 8; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); Calc: group
Comment 1 conman53095 2018-10-08 01:22:47 UTC
Created attachment 145461 [details]
complex ODG file that exhibits symptom
Comment 2 Xisco Faulí 2018-11-09 16:21:53 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=3c1fc723ff622d8a541fa26a3397ca4258332e4a

author	Varun Dhall <varun.dhall@studentpartner.com>	2017-06-22 11:24:10 +0530
committer	Michael Stahl <mstahl@redhat.com>	2017-06-30 19:39:16 +0200
commit 3c1fc723ff622d8a541fa26a3397ca4258332e4a (patch)
tree 2f7d5b66c2dcad5db9910f7b683ac9509bf227aa
parent a429d4317d2d4f9d6a1a39d996ee9fa41096d741 (diff)
EditEngine: Changing export selection for copy/paste

Bisected with: bibisect-linux64-6.0

Adding Cc: to Varun Dhall
Comment 3 Xisco Faulí 2018-11-09 16:26:08 UTC
Also reproduced in

Versión: 6.1.3.2
Id. de compilación: 86daf60bf00efa86ad547e59e09d6bb77c699acb
Subprocs. CPU: 1; SO: Windows 6.1; Repres. IU: predet.; 
Configuración regional: es-ES (es_ES); Calc: group threaded
Comment 4 Xisco Faulí 2018-11-09 16:33:10 UTC
Created attachment 146502 [details]
minimized document
Comment 5 QA Administrators 2019-11-17 03:32:20 UTC Comment hidden (obsolete, spam)
Comment 6 QA Administrators 2021-11-17 05:11:57 UTC Comment hidden (obsolete)
Comment 7 Rajasekaran Karunanithi 2023-02-08 11:40:31 UTC
Still reproducable in LO 7.6 Dev edition under Windows 10(x64).

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a834bbad8295cba0ca88a91a524aad48640271ec
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: en-IN (en_IN); UI: en-US
Calc: threaded
Comment 8 Commit Notification 2025-02-07 20:41:54 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4328d1cca66ed9d1e34a8d788d16a2205fe77c1c

tdf#120397 - odf export fix missing texts in text box control

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-02-10 08:55:29 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/d5f2a4568dce6e0d297399da2828d9054097b670

tdf#120397 - odf export fix missing texts in text box control

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-02-10 08:55:33 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/960e6af4fbe15e4cf857f74382adc0b994a12ff8

tdf#120397 - odf export fix missing texts in text box control

It will be available in 24.8.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2025-02-11 21:29:18 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-24-8-5":

https://git.libreoffice.org/core/commit/aef44ca736e5d6921b5350e5e61767f74d17b4a8

tdf#120397 - odf export fix missing texts in text box control

It will be available in 24.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2025-02-18 11:00:04 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-2-1":

https://git.libreoffice.org/core/commit/10203448ffe392c1bf3906895afb1315dd85b806

tdf#120397 - odf export fix missing texts in text box control

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.