tdf#120397 - odf export fix missing texts in text box control

(Ab)use a call to XTextRange::getText to flush edits and restore
the selection of the textcontent in the textfields.

TODO: unit/UItest

Change-Id: If8e1c85f3565ae1b80fd0645c0905aae16404379
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181245
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>